1999-08-12  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (swarm_directory_get_language_independent_class_name): 
	Referenced object needn't be a proxy.

1999-08-12  Alex Lancaster  <alex@santafe.edu>

	* DefObject.m: Move include of directory.h, outside HAVE_JDK,
	require swarm_directory_get_language_independent_class_name
	function in non-Java context.

	* directory.h: Likewise.

	* directory.m: Protect include of javavars.h with HAVE_JDK.

1999-08-11  Alex Lancaster  <alex@santafe.edu>

	* directory.[hm]
	(swarm_directory_get_language_independent_class_name): New
	function, performs a directory lookup to returns the Java class
	name the Java proxy, if there is one, otherwise defaults to the
	Objective C.

	* DefObject.m ([Object_s -getName]): Use new function.

1999-08-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m: Move all c_*, m_*, and f_* Java variables to
	javavars.h. (create_method_refs): Replace m_StringValueOf with
	m_StringValueOf{Boolean,Char,Int,Long,Float,Double,Object}.

	* Makefile.am (defobj_HEADERS): Add javavars.h.

	* javavars.h: New file.

1999-08-10  Marcus Daniels  <mgd@caos.santafe.edu>

	* directory.m (swarm_directory_ensure_selector): Add trailing
	colon if one is needed but is absent in Java spec.

1999-08-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m (ffi_types): Add entries for long double and Class.
	([FCall_c -performCall], [FCall_c -getRetVal:buf:]): Add
	support for long double.
	(defobj_init_java_call_tables): Set fcall_type_{class,long_double}
	cases to NULL.

1999-08-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (c_Field, c_Class, c_Method, c_Object, c_String):
	Renamed from lowercased version; use consistent naming convention
	for standard classes vs. primtives.  Accommodate throughout.
	(get_java_class, get_type_field_for_class): Split out internal
	functions previously named `find' and `find_primtive'.